# siphon

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
cli/: Cargo.toml
cli/src/: main.rs
examples/: lowering_demo.rs  stable_hash_demo.rs
protocols/: market_data.siphon
src/: lib.rs  normalize.rs  rif.rs  semantic_hash.rs
src/backend/: mod.rs  x86_64.rs
src/frontend/: mod.rs  parser.rs  protocol.rs
src/lowering/: jit.rs  mod.rs  serialize.rs  target.rs  witness.rs
src/runtime/: ingress.rs  mod.rs  telemetry.rs
